deployment/qzl-resident/vfs_server/deploy/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vfs-server-ingress
spec:
  podSelector:
    matchLabels: {app: vfs-server}
  policyTypes: ["Ingress","Egress"]
  ingress:
    - from:
        - podSelector: {}
      ports:
        - {protocol: TCP, port: 8787}
  egress: []
